data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_418.wast
;; 9. **Test Description 9:**    - Include a loop with several `br_if` instructions where a complex condition causes a mismatched label look-up, and the loop continues indefinitely rather than breaking.    - **Constraint: Label Lookup Constraint**    - **Relation to Infinite Loop:** Condition miscalculations keep the loop running.

(assert_invalid
  (module
    (func (loop (br_if 1 (i32.const 0)) (br_if 0 (i32.const 1)) (br_if 0 (i32.const 2)))
  ))
  "type mismatch"
)